# comp-net

lab0/: solution.md
lab1/: solution.md
lab10/: .gitignore  tasks.md
lab10/ping/: CMakeLists.txt  README.md  main.cpp
lab11/: .gitignore
lab11/tracert/: CMakeLists.txt  README.md  main.cpp
lab12/: .gitignore
lab12/rip/: CMakeLists.txt  buffered_channel.h  input.txt  main.cpp
lab13/: tasks.md
lab2/: .env  .env.testing  .gitignore  .phpunit.result.cache  README.md  solution.md
lab2/app/Http/: Kernel.php
lab2/app/Http/Controllers/: ApiController.php  ProductController.php
lab2/app/Http/Middleware/: AuthCheck.php  CorsSecure.php
lab2/app/Models/: Product.php
lab2/config/: auth_settings.php
lab2/database/migrations/: 2023_02_25_096810_create_products_table.php
lab2/routes/: api.php
lab2/tests/Feature/: ProductCreateTest.php  ProductDeleteTest.php  ProductInfoTest.php  ProductUpdateTest.php
lab3/: CMakeLists.txt  README.md
lab3/client/: main.cpp
lab3/server/: main.cpp
lab4/: CMakeLists.txt  README.md  doptasks.md  part 2.md
lab4/data_batch/: data_batch.hpp
lab4/my_http/: my_http.cpp  my_http.hpp
lab4/parse_http/: parse_http.cpp  parse_http.hpp
lab4/read_http/: read_http.cpp  read_http.hpp
lab4/socket_read/: socket_read.cpp  socket_read.hpp
lab4/src/client/: main.cpp
lab4/src/server/: main.cpp
lab4/uri/: uri.cpp
lab5/: CMakeLists.txt  README.md
lab5/open_tcp_connection/: open_tcp_connection.hpp
lab5/src/task_1/: main.cpp
lab5/src/task_2/: main.cpp
lab6/: .gitignore  filezilla.md  tasks.md
lab6/ftp_client/: CMakeLists.txt  README.md  main.cpp
lab6/ftp_client/data_batch/: data_batch.hpp
lab6/ftp_client/open_tcp_connection/: open_tcp_connection.cpp  open_tcp_connection.hpp
lab6/ftp_client/uri/: uri.hpp
lab7/: .gitignore  tasks.md
lab9/: tasks.md
