cmake_minimum_required(VERSION 3.15)
project(rip)
set(CMAKE_CXX_STANDARD 17)
find_library(LIBRT rt)
set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
set(THREADS_PREFER_PTHREAD_FLAG TRUE)

find_package(Threads REQUIRED)
add_executable(rip main.cpp buffered_channel.h)
target_link_libraries(rip ${LIBRT} Threads::Threads)
